# deepmd-pytorch

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  frozen_model.pth  lcurve.out  pyproject.toml  test.out  torchscript.ipynb  visualize.py
.github/workflows/: ci-docker.yml  ci-test.yml
deepmd/: __init__.py
deepmd/entrypoints/: main.py
deepmd/infer/: inference.py
deepmd/loss/: loss.py
deepmd/model/: model.py
deepmd/model/descriptor/: descriptor.py  embedding_net.py
deepmd/model/task/: fitting.py
deepmd/optimizer/: KFWrapper.py
deepmd/train/: training.py
deepmd/utils/: dataset.py
deepmd_pt/: calculator.py  dataset.py  descriptor.py  embedding_net.py  env.py  fitting.py  inference.py  learning_rate.py  loss.py  main.py  model.py  stat.py  training.py
deepmd_pt/entrypoints/: main.py
deepmd_pt/examples/water/dpa1-denoise/: input.json  lcurve.out
deepmd_pt/examples/water/dpa1-ener/: input.json
deepmd_pt/examples/water/dpa1-ener-model6/: input.json
deepmd_pt/examples/water/dpa1-ener-warmup-grad-clip/: input.json
deepmd_pt/examples/water/dpa1-force/: input.json
deepmd_pt/examples/water/dpa1-force-ener/: input.json
deepmd_pt/examples/water/dpa2-denoise/: input.json  lcurve.out
deepmd_pt/examples/water/dpa2-denoise/stat_files/: stat_file_rcut6.00_smth0.50_sel120.npz
deepmd_pt/examples/water/dpa2-ener/: input.json
deepmd_pt/examples/water/dpa2-force/: input.json
deepmd_pt/examples/water/dpa2-force-ener/: input.json
deepmd_pt/examples/water/dpau-denoise/: input.json
deepmd_pt/examples/water/dpau-ener/: input.json
deepmd_pt/examples/water/dpau-force-ener/: input.json
deepmd_pt/examples/water/gemnet-T/: input.json
deepmd_pt/examples/water/hybrid-denoise/: input.json  lcurve.out  model_1000.pt
deepmd_pt/examples/water/hybrid-denoise/stat_files/: stat_file_rcut4.00_smth0.50_sel40_se_uni.npz  stat_file_rcut6.00_smth0.50_sel120_se_atten.npz  stat_file_rcut9.00_smth2.00_sel120_se_atten.npz
deepmd_pt/examples/water/hybrid-ener/: input.json  lcurve.out
deepmd_pt/examples/water/hybrid-ener/stat_files/: stat_file_rcut9.00_smth2.00_sel120_se_atten.npz
deepmd_pt/examples/water/hybrid-force-ener/: input.json  lcurve.out  test.py
deepmd_pt/examples/water/hybrid-force-ener/stat_files/: stat_file_rcut4.00_smth0.50_sel40_se_uni.npz  stat_file_rcut6.00_smth0.50_sel120_se_atten.npz
deepmd_pt/examples/water/multitask/: input.json
deepmd_pt/examples/water/se_a/: input.json
deepmd_pt/infer/: deep_eval.py  inference.py
deepmd_pt/loss/: __init__.py  denoise.py  ener.py  loss.py  prop.py
deepmd_pt/model/: ener.py  model.py
deepmd_pt/model/backbone/: __init__.py  backbone.py  evoformer2b.py  evoformer3b.py
deepmd_pt/model/descriptor/: __init__.py  descriptor.py  dpa1.py  dpa2.py  dpa2_layer.py  embedding_net.py  env_mat.py  gaussian.py  gaussian_lcc.py  hybrid.py  repformer_layer.py  repformers.py  se_a.py  se_atten.py  se_uni.py
deepmd_pt/model/model/: __init__.py  atomic_model.py  dp_atomic_model.py  dpa1_denoise.py  dpa1_ener.py  dpa1_force.py  dpa2_denoise.py  dpa2_denoise_iter.py  dpa2_ener.py  dpa2_force.py  dpa2_lcc_force.py  dpau_denoise.py  dpau_ener.py  dpau_force.py  ener.py  hybrid_denoise.py  hybrid_ener.py  hybrid_force.py  make_model.py  model.py  pair_tab.py  se_a_ener.py  transform_output.py  translate_output.py
deepmd_pt/model/model/ocpmodels/: base.py  utils.py
deepmd_pt/model/model/ocpmodels/gemnet/: __init__.py  gemnet.py  initializers.py  scale_factor.py  utils.py
deepmd_pt/model/network/: mlp.py  network.py
deepmd_pt/model/task/: __init__.py  atten_lcc.py  denoise.py  dipole.py  ener.py  fitting.py  property.py  task.py  type_predict.py
deepmd_pt/optim/: KFWrapper.py
deepmd_pt/optimizer/: KFWrapper.py  LKF.py  __init__.py
deepmd_pt/train/: trainer.py  training.py  wrapper.py
deepmd_pt/utils/: ase_calc.py  auto_batch_size.py  cache.py  dataloader.py  dataset.py  dp_random.py  env.py  finetune.py  learning_rate.py  multi_task.py  nlist.py  plugin.py  preprocess.py  region.py  stat.py  utils.py
deepmd_pytorch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
deploy/: CMakeLists.txt  model.pt  test.cpp  test.py  test_compile.py  test_model.cpp
slurm/: distributed_data_parallel_slurm_run.bash  distributed_data_parallel_slurm_setup.py  distributed_data_parallel_slurm_setup.sbatch
source/api_cc/: CMakeLists.txt  build.sh
source/api_cc/include/: DeepPot.h  common.h
source/api_cc/src/: DeepPot.cc  common.cc
source/api_cc/test/cppapi/: CMakeLists.txt  test.cpp
source/api_cc/test/cppapi/test_coord/: box0.txt  coord0.txt
source/lib/include/: device.h
source/lmp/: build_lammps.sh  pair_deepmd.cpp  pair_deepmd.h
stat_files/: stat_file_rcut6.00_smth0.50_sel[46, 92].npz
tests/: requirements.txt  test_LKF.py  test_autodiff.py  test_calculator.py  test_deeppot.py  test_descriptor.py  test_descriptor_dpa1.py  test_descriptor_dpa2.py  test_dp_test.py  test_dpa1.py  test_embedding_net.py  test_ener_models.py  test_env_mat.py  test_fitting_net.py  test_force_grad.py  test_jit.py  test_loss.py  test_lr.py  test_mlp.py  test_model.py  test_models.py  test_nlist.py  test_pairtab.py  test_permutation.py  test_permutation_denoise.py  test_region.py  test_rot.py  test_rot_denoise.py  test_rotation.py  test_sampler.py  test_save.py  test_saveload_dpa1.py  test_saveload_se_e2_a.py  test_se_e2_a.py  test_smooth.py  test_smooth_denoise.py  test_stat.py  test_training.py  test_trans.py  test_trans_denoise.py  (+1 more)
tests/AlMgCu/: input_AlCuMg.json  job.json
tests/Cu/: job.json  se_e2_a.json
tests/LiGePS/: 0310.json  job.json  se_e2_a.json
tests/NoPBC/: se_atten.json
tests/NoPBC/data/data_0/: type_map.raw
tests/NoPBC/data/data_0/set.000000/: coord.npy  energy.npy  force.npy  real_atom_types.npy
tests/NoPBC/data/data_0/set.000001/: coord.npy  energy.npy  force.npy  (+1 more)
tests/druglike/: input.json
tests/models/: dpa1.json  dpa2.json  dpa2_hyb.json
tests/water/: input_AlCuMg.json  job.json  lkf.json  se_atten.json  se_e2_a.json  water_large.json
(+15 files in other folders)
