[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "deepmd-pytorch"
dynamic = ["version"]
description = "Implementation of DeePMD-kit using PyTorch"
authors = [
  {name = "DP Technology"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.md"
keywords = ["deepmd"]

[tool.setuptools.packages.find]
include = ["deepmd_pt*"]
