[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "deepmd-pytorch"
dynamic = ["version"]
description = "Implementation of DeePMD-kit using PyTorch"
authors = [
  {name = "DP Technology"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
     'torch >= 2a',
     'tqdm',
     'h5py',
     'wandb',
     'tensorflow>=2.14.0',
     'deepmd-kit >= 2.2.7',
]
requires-python = ">=3.8"
readme = "README.md"
keywords = ["deepmd"]

[project.urls]
repository = "https://github.com/dptech-corp/deepmd-pytorch"

[project.scripts]
dp_pt = "deepmd_pt.entrypoints.main:main"

[tool.setuptools.packages.find]
include = ["deepmd_pt*"]

[tool.setuptools_scm]
write_to = "deepmd_pt/_version.py"

[tool.cibuildwheel]
test-command = ["dp_pt -h",]
