cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(test)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Torch REQUIRED)
include_directories(${TORCH_INCLUDE_DIRS})
add_compile_options(${TORCH_CXX_FLAGS})
add_executable(test test_model.cpp)
target_link_libraries(test ${TORCH_LIBRARIES})
