cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
project(test)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SOURCE_PATH /root/Softwares/deepmd-pytorch/)
find_package (Eigen3 REQUIRED)
find_package(Torch REQUIRED)
add_executable(test test.cpp ${SOURCE_PATH}/source/api_cc/src/common.cc)
add_library(deepmd SHARED ${SOURCE_PATH}/source/api_cc/src/DeepPot.cc)
#target_link_libraries(test ${TORCH_LIBRARIES})
include_directories(${SOURCE_PATH}/source/api_cc/include /opt/mamba/envs/dppt/include/eigen3/)
target_link_libraries(deepmd ${TORCH_LIBRARIES} Eigen3::Eigen)
target_link_libraries(test ${TORCH_LIBRARIES} deepmd)
